--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
-    <string name="app_name">RecycleVnDrawer</string>
+    <string name="app_name">weather_Instants</string>
     <string name="deniel_msg">Permission Denied</string>
     <string name="permission_msg">Permission Rendered</string>
-    <string name="bStopText">Stop</string>
-    <string name="btextResume">Resume</string>
-    <string name="btextStart"> Start</string>
-    <string name="btextPause"> Pause</string>
-    <string name="mtext_01">Tracks Listing</string>
+    <!--<string name="bStopText">Stop</string>-->
+    <!--<string name="btextResume">Resume</string>-->
+    <!--<string name="btextStart"> Start</string>-->
+    <!--<string name="btextPause"> Pause</string>-->
+    <!--<string name="mtext_01">Tracks Listing</string>-->
     <string name="mtext_02">Weather</string>
 
     <!--<string name="new_message_notification_title_template">New message: %1$s</string>-->
@@ -14,12 +14,20 @@
 
     <!-- TODO: remove this placeholder text -->
     <!--<string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum-->
-        <!--dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel-->
-        <!--...-->
+    <!--dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel-->
+    <!--...-->
     <!--</string>-->
     <string name="new_message_notification_cust_msg">Media Player started: %1$s</string>
 
     <string name="action_share">Share</string>
     <string name="action_reply">Reply</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_weather">WeatherAct</string>
+    <string name="action_settings">Settings</string>
+    <string name="search_hint">Enter city, state</string>
+    <string name="title_act_wSearch">WSearch</string>
+    <string name="title_activity_weather_search">weatherSearch</string>
 
 </resources>
