foreCast set1 feteched: Day1 / Mon1 got + iCon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">weather_Instants</string>
+    <string name="app_name">weather_Insts</string>
     <string name="deniel_msg">Permission Denied</string>
     <string name="permission_msg">Permission Rendered</string>
 
