basic functionality is there, Caching, Icon download is there to implement

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">weather_Insts</string>
+    <string name="app_name">BottleVerOne</string>
     <string name="deniel_msg">Permission Denied</string>
     <string name="permission_msg">Permission Rendered</string>
 
@@ -10,15 +10,12 @@
     <!--<string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum-->
     <!--dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel-->
     <!--...-->
-    <!--</string>-->
-    <string name="new_message_notification_cust_msg">Media Player started: %1$s</string>
 
     <string name="action_share">Share</string>
-    <string name="action_reply">Reply</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_weather">WeatherAct</string>
+    <string name="title_activity_Bottle">BottledStore</string>
     <string name="action_settings">Settings</string>
     <string name="search_hint">Enter city, state</string>
     <string name="title_act_wSearch">WSearch</string>
